# gryphhackback

./: .gitmodules  CNAME  Mapping.js  README.md  account.css  account.html  account.js  index.html  index.js  service.css  service.html  service.js  style.css
Gryphhacks/: README.md  main.cpp  util.cpp  util.h
backend/: .gitignore  .gitrepo  CMakeLists.txt  notes.txt
gryphhacks/: account.css  account.html  account.js  index.html  index.js  package-lock.json  package.json  service.css  service.html  service.js  style.css
